--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <nav class="navbar navbar-expand-lg bg-transparent">
         <div class="container">
           <a class="navbar-brand" href="#">
-            <img src="../assets/icon/logo2.svg" alt="logo2" style="width: 100px;">
+            <img src="./assets/icon/logo2.svg" alt="logo2" style="width: 100px;">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -48,16 +48,21 @@
      <!-- main content -->
     <div class="container">
       <div class="row">
-        <div class="col-6"> 
-          <h1 class="fs-1 fw-bold font-poppins">
-            Setiap cangkir kopi merupakan sebuah petualangan baru
-          </h1>
-          <p class="font-poppins" style="color: #593B1F;">
-            Bingung memilih? Kami punya rekomendasi coffee shop terbaik untuk pengalaman minum kopi yang tak terlupakan! 
-          </p> 
-          <button class="btn btn-primary px-4 py-2 font-poppins">View Coffee Shop</button>
+        <div class="col-6 d-flex align-items-center"> 
+          <div>
+            <h1 class="fs-1 fw-bold font-poppins">
+              Setiap cangkir kopi merupakan sebuah petualangan baru
+            </h1>
+            <p class="font-poppins" style="color: #593B1F; margin-top: 20px;">
+              Bingung memilih? Kami punya rekomendasi coffee shop terbaik untuk pengalaman minum kopi yang tak terlupakan! 
+            </p> 
+            <button class="btn btn-primary px-4 py-2 font-poppins" style="margin-top: 20px;">View Coffee Shop</button>
+          </div>
         </div>
-        <div class="col-6"></div>
+        <div class="col-6">
+          <img src="./assets/img/Coffee shop.jpeg" alt="Coffee shop">
+
+        </div>
       </div>
     </div>
       <!-- main content end -->
