--- a/style/search.html
+++ b/style/search.html
@@ -31,7 +31,11 @@
     <nav class="navbar navbar-expand-lg bg-transparent">
       <div class="container">
         <a class="navbar-brand" href="#">
-          <img src="./image/Logo.png" alt="logo" style="width: 100px" />
+          <img
+            src="../asset/img/Logo nobg.png"
+            alt="logo"
+            style="width: 100px"
+          />
         </a>
         <button
           class="navbar-toggler"
@@ -45,11 +49,38 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav ms-auto gap-4 font-poppins">
-            <a class="nav-link" href="#">Home</a>
-            <a class="nav-link" href="#">CoffeeShop</a>
-            <a class="nav-link active" href="#">Booking</a>
-            <a class="nav-link" href="#">Filter</a>
+          <div
+            class="navbar-nav ms-auto gap-4 font-poppins"
+            style="transform: translateY(10px)"
+          >
+            <a class="nav-link active fw-medium" aria-current="page" href="#"
+              >Home</a
+            >
+            <a class="nav-link" href="CoffeeShop.html">CoffeeShop</a>
+            <a class="nav-link" href="../style/booking_form.html">Booking</a>
+
+            <!-- Dropdown Filter -->
+            <div class="nav-item dropdown">
+              <a
+                class="nav-link dropdwon-toggle"
+                href="#"
+                id="filterDropdown"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Filter
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="filterDropdown">
+                <li><a class="dropdown-item" href="#">Fasilitas</a></li>
+                <li><a class="dropdown-item" href="#">Rating</a></li>
+                <li><a class="dropdown-item" href="#">Harga</a></li>
+                <li><a class="dropdown-item" href="#">Menu</a></li>
+                <li><a class="dropdown-item" href="#">Daftar Favorite</a></li>
+              </ul>
+                   
+            </div>
+
             <a class="nav-link" href="#loginFormWrapper">Login</a>
             <a class="nav-link" href="#">Search</a>
           </div>
